// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageContent /> render matches snapshot while loading 1`] = `"Loading..."`;

exports[`<PageContent /> render matches snapshot with markdown 1`] = `
<styled.div>
  <Styled(styled.div)>
    <styled.div>
      <styled.div>
        <Styled(styled.h1) />
        <styled.div>
          <Markdown />
        </styled.div>
      </styled.div>
      <styled.div>
        <styled.div>
          <Markdown>
            ### some data
          </Markdown>
        </styled.div>
      </styled.div>
    </styled.div>
  </Styled(styled.div)>
</styled.div>
`;

exports[`<PageContent /> render matches snapshot with markdown 2`] = `
<styled.div>
  <Styled(styled.div)>
    <styled.div>
      <styled.div>
        <Styled(styled.h1)>
          foo
        </Styled(styled.h1)>
        <styled.div>
          <Markdown />
        </styled.div>
      </styled.div>
      <styled.div>
        <styled.div>
          <Markdown>
            ### some data
          </Markdown>
        </styled.div>
      </styled.div>
    </styled.div>
  </Styled(styled.div)>
</styled.div>
`;

exports[`<PageContent /> render matches snapshot with markdown 3`] = `
<styled.div>
  <Styled(styled.div)>
    <styled.div>
      <styled.div>
        <Styled(styled.h1)>
          foo
        </Styled(styled.h1)>
        <styled.div>
          <Markdown>
            - a link
          </Markdown>
        </styled.div>
      </styled.div>
      <styled.div>
        <styled.div>
          <Markdown>
            ### some data
          </Markdown>
        </styled.div>
      </styled.div>
    </styled.div>
  </Styled(styled.div)>
</styled.div>
`;

exports[`<PageContent /> render matches snapshot with markdown 4`] = `
<styled.div>
  <Styled(Hero)
    image="http://foo"
  />
  <Styled(styled.div)>
    <styled.div>
      <styled.div>
        <Styled(styled.h1)>
          foo
        </Styled(styled.h1)>
        <styled.div>
          <Markdown>
            - a link
          </Markdown>
        </styled.div>
      </styled.div>
      <styled.div>
        <styled.div>
          <Markdown>
            ### some data
          </Markdown>
        </styled.div>
      </styled.div>
    </styled.div>
  </Styled(styled.div)>
</styled.div>
`;
